samples/_failures_safe/1761703594_caab02_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3e32497e.c: In function ‘main’:
./samples/SAFE/__tmp_3e32497e.c:149:21: error: expected expression at end of input
  149 |                     print_matrix(&
      |                     ^~~~~~~~~~~~
./samples/SAFE/__tmp_3e32497e.c:149:21: error: too few arguments to function ‘print_matrix’
./samples/SAFE/__tmp_3e32497e.c:54:6: note: declared here
   54 | void print_matrix(const Matrix* mat, const char* name) {
      |      ^~~~~~~~~~~~
./samples/SAFE/__tmp_3e32497e.c:149:21: error: expected declaration or statement at end of input
  149 |                     print_matrix(&
      |                     ^~~~~~~~~~~~
./samples/SAFE/__tmp_3e32497e.c:149:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3e32497e.c:149:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3e32497e.c:149:21: error: expected declaration or statement at end of input
